# HiJNI

./: CMakeLists.txt
include/: Animal.hpp  Person.hpp
jsrc/: io_lanza_HiJNI.h
jsrc/io/lanza/: HiJNI.java
lib/: CMakeLists.txt
lib/AnimalJNI/: Animal.cpp  CMakeLists.txt
lib/HiJNINative/: CMakeLists.txt  Hello.cpp
lib/PersonJNI/: CMakeLists.txt  Person.cpp
